firebase , playfab kullanici kayit ve login sistemi kuruldu , login olduktan  sonra  bir loading ekrani eklendi...
Former-commit-id: df149317ba0f274338cc149628a41499cb84bc8e
Former-commit-id: 1269812da4619a6b442e42ea910d4cf4aa7c3624

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-# Firebase Plugins
-Assets/Plugins/Firebase/Plugins/x86_64/FirebaseCppApp-12_0_0.bundle
-Assets/Plugins/Firebase/Plugins/x86_64/FirebaseCppApp-12_0_0.so
+# Ignore all files in the Assets/Plugins directory
+Assets/Plugins/
+
 
